FullQa New/src/objects/CX_Data_Feed__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CX Data Feeds</relationshipLabel>
        <relationshipName>CX_Data_Feeds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CPO_AR_Overall_Score__c</fullName>
        <label>CPO AR Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_CAM_Alert_Note__c</fullName>
        <label>CPO AvaTax CAM Alert Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_Open120_Score__c</fullName>
        <label>CPO AvaTax Case Open120 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_Open60_Score__c</fullName>
        <label>CPO AvaTax Case Open60 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_Open90_Score__c</fullName>
        <label>CPO AvaTax Case Open90 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_OpenAllUp_Score__c</fullName>
        <label>CPO AvaTax Case OpenAllUp Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_Overall_Score__c</fullName>
        <label>CPO AvaTax Case Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_Predictive_Top_5__c</fullName>
        <label>CPO AvaTax Case Predictive Top 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Case_Top_5__c</fullName>
        <label>CPO AvaTax Case Top 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Driver_Summary__c</fullName>
        <label>CPO AvaTax Driver Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_GoLive_IsLive_Score__c</fullName>
        <label>CPO AvaTax GoLive IsLive Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_GoLive_Overall_Score__c</fullName>
        <label>CPO AvaTax GoLive Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_GoLive_Velocity_Score__c</fullName>
        <label>CPO AvaTax GoLive Velocity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Overall_Score__c</fullName>
        <label>CPO AvaTax Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Predictive_Summary__c</fullName>
        <label>CPO AvaTax Predictive Summary</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Returns_Predictive_Top_5__c</fullName>
        <label>CPO AvaTax Returns Predictive Top 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Usage_Billable_Score__c</fullName>
        <label>CPO AvaTax Usage Billable Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Usage_Overall_Score__c</fullName>
        <label>CPO AvaTax Usage Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_AvaTax_Usage_Raw_Score__c</fullName>
        <label>CPO AvaTax Usage Raw Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_Open120_Score__c</fullName>
        <label>CPO CertCapture Case Open120 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_Open60_Score__c</fullName>
        <label>CPO CertCapture Case Open60 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_Open90_Score__c</fullName>
        <label>CPO CertCapture Case Open90 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_OpenAllUp_Score__c</fullName>
        <label>CPO CertCapture Case OpenAllUp Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_Overall_Score__c</fullName>
        <label>CPO CertCapture Case Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_Predictive_Top_5__c</fullName>
        <label>CPO CertCapture Case Predictive Top 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Case_Top_5__c</fullName>
        <label>CPO CertCapture Case Top 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Driver_Summary__c</fullName>
        <label>CPO CertCapture Driver Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_GoLive_IsLive_Score__c</fullName>
        <label>CPO CertCapture GoLive IsLive Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_GoLive_Overall_Score__c</fullName>
        <label>CPO CertCapture GoLive Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_GoLive_Velocity_Score__c</fullName>
        <label>CPO CertCapture GoLive Velocity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Overall_Score__c</fullName>
        <label>CPO CertCapture Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_CertCapture_Predictive_Summary__c</fullName>
        <label>CPO CertCapture Predictive Summary</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPO_Overall_Score__c</fullName>
        <label>CPO Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case_Open120_Score__c</fullName>
        <label>CPO Returns Case Open120 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case_Open60_Score__c</fullName>
        <label>CPO Returns Case Open60 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case_Open90_Score__c</fullName>
        <label>CPO Returns Case Open90 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case_OpenAllUp_Score__c</fullName>
        <label>CPO Returns Case OpenAllUp Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case_Overall_Score__c</fullName>
        <label>CPO Returns Case Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Case_Top_5__c</fullName>
        <label>CPO Returns Case Top 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Driver_Summary__c</fullName>
        <label>CPO Returns Driver Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_GoLive_IsLive_Score__c</fullName>
        <label>CPO Returns GoLive IsLive Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_GoLive_Overall_Score__c</fullName>
        <label>CPO Returns GoLive Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_GoLive_Velocity_Score__c</fullName>
        <label>CPO Returns GoLive Velocity Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Notices_OpenAllUp_Score__c</fullName>
        <label>CPO Returns Notices OpenAllUp Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Notices_OpenCount_Score__c</fullName>
        <label>CPO Returns Notices OpenCount Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Notices_Overall_Score__c</fullName>
        <label>CPO Returns Notices Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Notices_Received30_Score__c</fullName>
        <label>CPO Returns Notices Received30 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Predictive_Summary__c</fullName>
        <label>CPO Returns Predictive Summary</label>
        <length>2500</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CPO_Returns_Score_Overall_Score__c</fullName>
        <label>CPO Returns Overall Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Activation_Case_Average__c</fullName>
        <label>CSAT Activation Case Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Average__c</fullName>
        <formula>Account__r.Average_CSAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CSAT Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CSAT_Support_Case_Average__c</fullName>
        <label>CSAT Support Case Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CX Data Feed CaseSafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Overall__c</fullName>
        <formula>IF(Account__r.CPO_Overall_Score__c =   CPO_Overall_Score__c  , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Overall?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Average__c</fullName>
        <formula>Account__r.Average_NPS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Average</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Count_Current_Detractors__c</fullName>
        <label>NPS Count Current Detractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Count_Current_Promoters__c</fullName>
        <label>NPS Count Current Promoters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Count_Previous_Detractors__c</fullName>
        <label>NPS Count Previous Detractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Count_Previous_Promoters__c</fullName>
        <label>NPS Count Previous Promoters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Current_Detractor_Contacts__c</fullName>
        <label>NPS Current Detractor Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Current_Promoter_Contacts__c</fullName>
        <label>NPS Current Promoter Contacts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Overall_Current_Date__c</fullName>
        <label>NPS Overall Current Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Overall_Current_Score__c</fullName>
        <label>NPS Overall Current Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Overall_Previous_Date__c</fullName>
        <label>NPS Overall Previous Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Overall_Previous_Score__c</fullName>
        <label>NPS Overall Previous Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CX Data Feed</label>
    <nameField>
        <displayFormat>cxdf{0000}</displayFormat>
        <label>CX Data Feed ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CX Data Feeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>